- Updated logic to use the "host name" container variable - Changes to ensure, logo displayed at a fixed size of 24x24 pixels without cropping or cutting any part of the image

--- a/static/styles.css
+++ b/static/styles.css
@@ -84,3 +84,12 @@ table th {
         padding: 10px;
     }
 }
+
+.logo .logo-img {
+    max-width: 24px;
+    max-height: 24px;
+    width: auto;
+    height: auto;
+}
+
+
